[package]
name = "tokio-shortlink"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
rand = "0.9.1"
redis = { version = "0.32.3", features = ["aio", "tokio-comp", "connection-manager"] }
serde = "1.0.219"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.46.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
