[package]
name = "tokio-shortlink"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
config = "0.15.13"
ctor = "0.4.2"
dotenvy = "0.15.7"
headers = "0.4.1"
jsonwebtoken = "9.3.1"
password-hash = "0.5.0"
rand = "0.9.2"
redis = { version = "0.32.3", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
serde = "1.0.219"
serde_json = "1.0.141"
serial_test = "3.2.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
